# ChangeLog for x11-themes/metacity-themes
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/metacity-themes/ChangeLog,v 1.12 2006/11/15 01:33:14 metalgod Exp $

*metacity-themes-1.1 (15 Nov 2006)

  15 Nov 2006; Luis Medinas <metalgod@gentoo.org>
  +metacity-themes-1.1.ebuild:
  Version Bump. Added five new modern themes.

  06 Nov 2005; Mike Gardiner <obz@gentoo.org> metacity-themes-1.0.ebuild:
  Remove .xvpics directories in the installed themes, see bug #97368.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> metacity-themes-1.0.ebuild:
  Add inherit eutils

  01 Mar 2004; Markus Nigbur <pyrania@gentoo.org> metacity-themes-1.0.ebuild:
  Stable on x86.

  06 Feb 2004; <gustavoz@gentoo.org> metacity-themes-1.0.ebuild:
  stable on sparc

  02 Jan 2004; <gustavoz@gentoo.org> metacity-themes-1.0.ebuild:
  marked stable on hppa

  13 Dec 2003; Brad House <brad_mssw@gentoo.org> metacity-themes-1.0.ebuild:
  mark stable on amd64

  08 Sep 2003; Todd Sunderlin <todd@gentoo.org> metacity-themes-1.0.ebuild:
  marked unstable for sparc

*metacity-themes-1.0 (29 Oct 2002)

  26 Jan 2003; Jon Nall <nall@gentoo.org> metacity-themes-1.0.ebuild :
  added ~ppc

  29 Oct 2002; L. Boshell <leonardop@gentoo.org> ChangeLog,
  metacity-themes-1.0.ebuild : Initial release.