@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/metacity-themes
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/metacity-themes/ChangeLog,v 1.12 2006/11/15 01:33:14 metalgod Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/metacity-themes/ChangeLog,v 1.13 2007/03/29 22:05:00 ticho Exp $
+
+  29 Mar 2007; Andrej Kacian <ticho@gentoo.org> metacity-themes-1.1.ebuild:
+  Stable on x86, bug #172652.
 
 *metacity-themes-1.1 (15 Nov 2006)
 
